@@ -28,6 +28,8 @@ möglicherweise nicht kompatible Änderungen:
 - .webStandard strong/em/ol/ul/li ist jetzt im vps und sollte in webs entfernt werden
 - newsListView und eventsListView Teaser haben jetzt ein nl2br
 - showInPageTreeAdmin flag gibts nicht mehr, ist jetzt nur noch ein generatorFlag
+- HtmlEditor: enableBlocks setting gibts nicht mehr, wurde in FormatBlock plugin ausgelagert und
+  müsste manuell zu plugins hinzugefügt werden
 
 == 1.10 ==
 Erstellt: 09.06.10
